--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* Styling */
 body {
-background-image: url("https://doublefeature.fm/wp-content/uploads/sites/8/jurassic-park.jpg");
+background-image: url("https://previews.123rf.com/images/niradj/niradj1508/niradj150800079/44497514-Jungle-background-Krabi-Thailand-Stock-Photo-tropical.jpg");
     position: relative;
     background-attachment: fixed;
     background-size: cover;
