--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,7 @@ video {
     height: 100%;
 }
 
-h1 {
-    background: white;
-    
-    font-size: 2em;
-    text-align: center;
-    color: black;
-}
+
 
 #trailer {
     max-width: 65%;
@@ -25,12 +19,25 @@ h1 {
     
 }
 
+#logo {
+    position:   relative;
+    max-width: 90%;
+    margin: auto;
+    align-items: center;
+}
+
 .char1 {
-    font-size: 3em;
+    font-size: 1.5em;
     color: orangered;
 }
 
-.char10 {
-    font-size: 3em;
-    color: orangered;
+.description {
+    border: solid 5px red;
+    background-color: white;
+    width:500px;
+    font-size: 1em;
+    color: black;
+    padding: 1em;
+    margin: 4em;
+    justify-content: center;
 }
