--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* Styling */
 body {
-background-image: url("https://previews.123rf.com/images/niradj/niradj1508/niradj150800079/44497514-Jungle-background-Krabi-Thailand-Stock-Photo-tropical.jpg");
+background-image: url("https://c1.staticflickr.com/1/176/415372589_e4ed5c912b_b.jpg");
     position: relative;
     background-attachment: fixed;
     background-size: cover;
@@ -20,10 +20,12 @@ video {
 }
 
 #logo {
-    position:   relative;
     max-width: 90%;
-    margin: auto;
-    align-items: center;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+    padding: 1.5em;
+    
 }
 
 .char1 {
@@ -32,6 +34,7 @@ video {
 }
 
 .description {
+    
     border: solid 5px red;
     background-color: white;
     width:500px;
@@ -40,4 +43,14 @@ video {
     padding: 1em;
     margin: 4em;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (max-width:768px) {
+    
+    .description {
+        max-width: 10em;
+    }
+    
 }
